portainer/portainer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: portainer
spec:
  selector:
    app: portainer
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
